@@ -1,11 +1,12 @@
 # -*- coding: utf-8 -*-
 """Setup tests for this package."""
 from plone import api
-from mordac2.quota.testing import MORDAC2_QUOTA_INTEGRATION_TESTING  # noqa: E501
 from plone.app.testing import setRoles
 from plone.app.testing import TEST_USER_ID
+from mordac2.quota.testing import MORDAC2_QUOTA_INTEGRATION_TESTING  # noqa: E501
 
 import unittest
+
 
 try:
     from Products.CMFPlone.utils import get_installer
