@@ -1,5 +1,9 @@
 2019-04-08  Michael Guravage  <guravage@arda.itf.cwi.nl>
 
+	* test_setup.py: More Flake8 nonsense.
+
+	* test_robot.py: More Flake8 nonsense.
+
 	* test_setup.py: Corrected import order to pacify isort.
 
 	* test_robot.py: Corrected import order to pacify isort.
